<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jackg.appointmentapp.MainActivity">

    <CalendarView
        android:id="@+id/myCalendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:firstDayOfWeek="2"
        android:weekSeparatorLineColor="@color/calendarSeparator"
        android:maxDate="01/01/2018"
        android:showWeekNumber="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/createBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createTxt"/>
        <Button
            android:id="@+id/viewEditBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/viewEditTxt"/>
        <Button
            android:id="@+id/delAppointmentBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delAppointmentTxt"/>
        <Button
            android:id="@+id/moveAppointmentBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/moveAppointTxt"/>
        <Button
            android:id="@+id/searchBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchTxt"/>
    </LinearLayout>


</RelativeLayout>
